--- a/hopper/test/Dockerfile-ec2
+++ b/hopper/test/Dockerfile-ec2
@@ -48,9 +48,14 @@ RUN apt-get install -y libomp5 git && \
 	python3 -m pip install --no-deps wheels/torchvision/*.whl && \
 	rm -rf wheels
 
-# Install huggingface/transformers
-RUN mkdir -p /opt/ml \
- && cd /opt/ml \
+# Create /opt/ml folder
+RUN mkdir -p /opt/ml
+
+# Copy hopper directory from xla/hopper which contains test scripts and files
+COPY hopper /opt/ml/hopper
+
+#  Install huggingface/transformers
+RUN cd /opt/ml \
  && git clone --recursive -b benchmark-xla https://github.com/trevor-m/transformers.git \
  && cd transformers \
  && python3 -m pip install -e .
