Enable cuda in PT build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-get install -y curl unzip && \
 RUN git clone -b hopper/main https://git-codecommit.us-west-2.amazonaws.com/v1/repos/PyTorch pytorch
 
 # Disable CUDA for PyTorch
-ENV USE_CUDA "0"
+ENV USE_CUDA "${cuda}"
 
 # Enable CUDA for XLA
 ENV XLA_CUDA "${cuda}"
