--- a/hopper/test/Dockerfile-ec2
+++ b/hopper/test/Dockerfile-ec2
@@ -48,14 +48,14 @@ RUN apt-get install -y libomp5 git && \
 	python3 -m pip install --no-deps wheels/torchvision/*.whl && \
 	rm -rf wheels
 
-# Create /opt/ml folder
-RUN mkdir -p /opt/ml
+# Create /opt/ml/code folder
+RUN mkdir -p /opt/ml/code
 
 # Copy hopper directory from xla/hopper which contains test scripts and files
-COPY hopper /opt/ml/hopper
+COPY hopper /opt/ml/code/hopper
 
 #  Install huggingface/transformers
-RUN cd /opt/ml \
+RUN cd /opt/ml/code \
  && git clone --recursive -b benchmark-xla https://github.com/trevor-m/transformers.git \
  && cd transformers \
  && python3 -m pip install -e .
