Initial implementation of topk_symint
Add .torch_pin

Address CR comments

Make index type to be int32

Revert back to Long dtype

--- a/xla_native_functions.yaml
+++ b/xla_native_functions.yaml
@@ -385,6 +385,7 @@ symint:
   - select.int
   # See Note: [functionalization and CompositeExplicitAutograd]
   - reshape
+  - topk
 autograd:
   - einsum
   - max_pool2d
