Initial implementation of aten::_unique2
Add cpp tests and make unique experimental

Fix CI failure

--- a/xla_native_functions.yaml
+++ b/xla_native_functions.yaml
@@ -329,6 +329,7 @@ supported:
   - unbind_copy.int
   - uniform_
   - unsqueeze_copy
+  - _unique2
   - upsample_bilinear2d
   - upsample_bilinear2d_backward
   - upsample_nearest2d
